--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "csv-writer": "^1.6.0",
     "pdf2json": "^3.0.1",
+    "selenium-webdriver": "^4.6.1",
     "sscanf": "^0.8.0",
     "wildcard-match": "^5.1.2"
   }
