--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-writer": "^1.6.0",
+    "node-key-sender": "^1.0.11",
     "pdf2json": "^3.0.1",
     "selenium-webdriver": "^4.6.1",
     "sscanf": "^0.8.0",
