--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pdf2json": "^3.0.1",
     "selenium-webdriver": "^4.6.1",
     "sscanf": "^0.8.0",
+    "uuid": "^9.0.0",
     "wildcard-match": "^5.1.2"
   }
 }
